--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 				"command": "fsAiTools.airlineView",
 				"title": "Show Airline View",
 				"category": "FS AI Tools",
-				"when": "resourceFilename =~ /^((flightplans)|(aircraft)|(airports)).*txt$/i"
+				"when": "resourceFilename =~ /^(aircraft|airports|flightplans).*txt$/i"
 			},
 			{
 				"command": "fsAiTools.cleanAircraftCfg",
@@ -138,7 +138,7 @@
 				{
 					"command": "fsAiTools.airlineView",
 					"group": "FS AI Tools",
-					"when": "config.fs-ai-tools.airlineView._ShowInContextMenu && resourceFilename =~ /^((aircraft)|(flightplans)).*txt$/i"
+					"when": "config.fs-ai-tools.airlineView._ShowInContextMenu && resourceFilename =~ /^(aircraft|airports|flightplans).*txt$/i"
 				},
 				{
 					"command": "fsAiTools.cleanAircraftCfg",
@@ -217,6 +217,11 @@
 				}
 			],
 			"explorer/context": [
+				{
+					"command": "fsAiTools.airlineView",
+					"group": "FS AI Tools",
+					"when": "resourceFilename =~ /^(aircraft|airports|flightplans).*txt$/i"
+				},
 				{
 					"command": "fsAiTools.generateAirports",
 					"group": "FS AI Tools",
@@ -755,14 +760,14 @@
 		"@types/node": "^17.0.21",
 		"@types/vscode": "^1.64.0",
 		"@vscode/test-electron": "^2.1.3",
-		"eslint": "^8.10.0",
+		"eslint": "^8.11.0",
 		"typescript": "^4.6.2",
-		"vsce": "^2.6.7"
+		"vsce": "^2.7.0"
 	},
 	"dependencies": {
 		"fs": "~0.0.1-security",
 		"lodash": "^4.17.21",
-		"mocha": "^9.2.1",
+		"mocha": "^9.2.2",
 		"path": "~0.12.7"
 	}
 }
