Airline View: Routemap checks for missing airports

--- a/package.json
+++ b/package.json
@@ -766,6 +766,7 @@
 		"vsce": "^2.7.0"
 	},
 	"dependencies": {
+		"axios": "^0.26.1",
 		"fs": "~0.0.1-security",
 		"lodash": "^4.17.21",
 		"path": "~0.12.7"
