--- a/package.json
+++ b/package.json
@@ -845,20 +845,28 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
+		"vscode:prepublish": "npm run esbuild-base -- --minify",
 		"watch": "tsc -watch -p ./",
 		"package": "vsce package",
-		"test": "npm run ./src/test/runTest"
+		"esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
+		"esbuild": "npm run esbuild-base -- --sourcemap",
+		"esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+		"test-compile": "tsc -p ./",
+		"test_OLD": "npm run ./src/test/runTest",
+		"test": "eslint src --ext ts && tsc --noEmit"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.182",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^17.0.31",
 		"@types/vscode": "^1.66.0",
+		"@typescript-eslint/eslint-plugin": "^5.22.0",
 		"@vscode/test-electron": "^2.1.3",
+		"esbuild": "^0.14.38",
 		"eslint": "^8.14.0",
+		"eslint-plugin-header": "^3.1.1",
 		"mocha": "^10.0.0",
+		"rimraf": "^3.0.2",
 		"typescript": "^4.6.4",
 		"vsce": "^2.7.0"
 	},
