--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"onCommand:fsAiTools.createFlightplanHeaderFromAifp",
 		"onCommand:fsAiTools.flightplanMetadata",
 		"onCommand:fsAiTools.generateAirports",
+		"onCommand:fsAiTools.hoursToWeek",
 		"onCommand:fsAiTools.matchAcNumbers",
 		"onCommand:fsAiTools.openMasterAirportsFile",
 		"onCommand:fsAiTools.rebaseAircraftNumbers",
@@ -138,6 +139,11 @@
 				"category": "FS AI Tools"
 			},
 			{
+				"command": "fsAiTools.hoursToWeek",
+				"title": "Convert to weekly flightplan",
+				"category": "FS AI Tools"
+			},
+			{
 				"command": "fsAiTools.matchAcNumbers",
 				"title": "Match AC#s",
 				"category": "FS AI Tools"
@@ -222,6 +228,10 @@
 				},
 				{
 					"command": "fsAiTools.generateAirports",
+					"when": "resourceFilename =~ /^flightplans.*txt$/i"
+				},
+				{
+					"command": "fsAiTools.hoursToWeek",
 					"when": "resourceFilename =~ /^flightplans.*txt$/i"
 				},
 				{
@@ -899,22 +909,22 @@
 		"test": "eslint src --ext ts && tsc --noEmit"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.14.182",
-		"@types/mocha": "^9.1.1",
-		"@types/node": "^17.0.35",
-		"@types/vscode": "^1.67.0",
-		"@typescript-eslint/eslint-plugin": "^5.25.0",
-		"@vscode/test-electron": "^2.1.3",
-		"esbuild": "^0.14.39",
-		"eslint": "^8.16.0",
+		"@types/lodash": "^4.14.188",
+		"@types/mocha": "^10.0.0",
+		"@types/node": "^18.11.9",
+		"@types/vscode": "^1.73.0",
+		"@typescript-eslint/eslint-plugin": "^5.42.1",
+		"@vscode/test-electron": "^2.2.0",
+		"esbuild": "^0.15.13",
+		"eslint": "^8.27.0",
 		"eslint-plugin-header": "^3.1.1",
-		"mocha": "^10.0.0",
+		"mocha": "^10.1.0",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.6.4",
-		"vsce": "^2.8.0"
+		"typescript": "^4.8.4",
+		"vsce": "^2.14.0"
 	},
 	"dependencies": {
-		"axios": "^0.27.2",
+		"axios": "^1.1.3",
 		"fs": "~0.0.1-security",
 		"lodash": "^4.17.21",
 		"path": "~0.12.7"
