--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"onCommand:fsAiTools.createAircraft",
 		"onCommand:fsAiTools.createFlightplanHeader",
 		"onCommand:fsAiTools.createFlightplanHeaderFromAifp",
+		"onCommand:fsAiTools.deleteAircraft",
 		"onCommand:fsAiTools.flightplanMetadata",
 		"onCommand:fsAiTools.generateAirports",
 		"onCommand:fsAiTools.hoursToWeek",
@@ -122,6 +123,11 @@
 			{
 				"command": "fsAiTools.createFlightplanHeader",
 				"title": "Create Flightplan Header",
+				"category": "FS AI Tools"
+			},
+			{
+				"command": "fsAiTools.deleteAircraft",
+				"title": "Delete Aircraft",
 				"category": "FS AI Tools"
 			},
 			{
@@ -229,6 +235,10 @@
 					"when": "resourceFilename =~ /^flightplans.*txt$/i"
 				},
 				{
+					"command": "fsAiTools.deleteAircraft",
+					"when": "resourceFilename =~ /^aircraft.*txt$/i && editorHasSelection"
+				},
+				{
 					"command": "fsAiTools.flightplanMetadata",
 					"when": "config.fs-ai-tools.isDev && resourceFilename =~ /^flightplans.*txt$/i"
 				},
@@ -321,6 +331,11 @@
 					"command": "fsAiTools.createFlightplanHeaderFromAifp",
 					"group": "FS AI Tools",
 					"when": "config.fs-ai-tools.createFlightplanHeaderFromAifp.showInContextMenu && resourceFilename =~ /^flightplans.*txt$/i"
+				},
+				{
+					"command": "fsAiTools.deleteAircraft",
+					"group": "FS AI Tools",
+					"when": "resourceFilename =~ /^aircraft.*txt$/i && editorHasSelection"
 				},
 				{
 					"command": "fsAiTools.generateAirports",
@@ -701,6 +716,26 @@
 			},
 			{
 				"type": "object",
+				"title": "Delete Aircraft",
+				"properties": {
+					"fs-ai-tools.deleteAircraft._ShowInContextMenu": {
+						"type": "boolean",
+						"default": true,
+						"title": "Add to Context Menu",
+						"markdownDescription": "Adds the \"Delete Aircraft\" command to the context menu when an `Aircraft….txt` file is open and some text has been selected.",
+						"scope": "window"
+					},
+					"fs-ai-tools.deleteAircraft.aircraftDirectory": {
+						"type": "string",
+						"default": "",
+						"title": "Aircraft directory",
+						"markdownDescription": "Full path to the folder containing all AI aircraft folders. àircraft.cfg´ files within that directory as well as its subdirectories will be checked.",
+						"scope": "window"
+					}
+				}
+			},
+			{
+				"type": "object",
 				"title": "Generate Airports",
 				"properties": {
 					"fs-ai-tools.generateAirports._showInContextMenu": {
@@ -936,6 +971,7 @@
 	"dependencies": {
 		"axios": "^1.1.3",
 		"fs": "~0.0.1-security",
+		"tiny-glob": "^0.2.9",
 		"lodash": "^4.17.21",
 		"path": "~0.12.7"
 	}
